# cagent

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
cagent/: __init__.py  action_schema.py  agent.py  approval_queue.py  approval_runner.py  cli.py  command_policy.py  config.py  llm.py  log_json_cli.py  log_viewer.py  mcp_manifest.py  model_router.py  project_engine.py  project_snapshot.py  project_state_run.py  prompts.py  repomap.py  runlog.py  secret_scan.py  stdio_server.py  tools.py  trust.py  web_ui.py
docs/: ACTION_PROTOCOL.md  APPROVAL_QUEUE.md  CLIENTS.md  CONFIG.md  PROJECT_RUN_STATE.md  PROJECT_SNAPSHOT.md  QUALITY.md  REPO_MAP.md  ROADMAP.md  RUN_LOG_JSON.md  SECRET_SCANNING.md  STDIO_ADAPTER.md  T4_TAILSCALE_OLLAMA.md  TRANSPORT.md  WEB_UI.md
tests/: test_action_schema.py  test_adapter_config.py  test_agent_parser.py  test_approval_integration.py  test_approval_queue.py  test_approval_runner.py  test_cli_config.py  test_cli_snapshot.py  test_cli_transport.py  test_command_policy.py  test_config.py  test_llm.py  test_log_json_cli.py  test_log_viewer_and_manifest.py  test_log_viewer_json.py  test_manifest_config.py  test_mcp_manifest.py  test_model_router.py  test_project_engine.py  test_project_snapshot.py  test_project_state_run.py  test_repomap.py  test_runlog.py  test_security_foundation.py  test_stdio_server.py  test_tools.py  test_web_ui.py
