[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cagent"
version = "0.1.0"
description = "Small self-hosted coding agent for OpenAI-compatible local model endpoints."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "sushiomsky" }]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
cagent = "cagent.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["cagent*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
